--- a/package.json
+++ b/package.json
@@ -53,7 +53,12 @@
     "webpack": "3.4.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "cryptiles": "^4.1.2",
+    "hawk": "^3.1.3",
+    "hoek": "^4.2.1",
     "jquery": "^3.4.1",
-    "object-fit": "^0.4.3"
+    "object-fit": "^0.4.3",
+    "static-eval": "^2.0.0"
   }
 }
