--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack": "3.4.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "axios": "^0.19.0",
     "cryptiles": "^4.1.2",
     "hawk": "^3.1.3",
