--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   },
   "extends": "eslint:recommended",
   "rules": {
+    "no-console": "off",
     "max-len": [1, 80, 2, {"ignoreComments": true}],
     "no-unused-vars": [1]
   }
