--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "My gulp template",
   "author": "Graboviy Vadym <hraboviyvadim@gmail.com>",
   "scripts": {
-    "build": "trash build/* && gulp build"
+    "build": "trash build/* && gulp build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/hraboviyvadim/gulp-boilerplate"
   },
+  "homepage": "https://OdiEv.github.io/working-with-forms",
   "devDependencies": {
     "autoprefixer": "7.1.2",
     "babel-core": "^6.26.3",
@@ -56,6 +59,7 @@
     "@fortawesome/fontawesome-free": "^5.9.0",
     "axios": "^0.19.0",
     "cryptiles": "^4.1.2",
+    "gh-pages": "^2.2.0",
     "hawk": "^3.1.3",
     "hoek": "^4.2.1",
     "jquery": "^3.4.1",
